specify numpy version for py 3.8.5 to fix samtools bug

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ install_requires =
     gffutils == 0.10.1
     pysam
     MACS2
+    numpy >= 1.21.4;python_version=='3.8.5'
 
 [options.entry_points]
 console_scripts =
