make pre-processing asynchronous; improve logging

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,8 @@ install_requires =
     pysam
     MACS2
     numpy >= 1.21.4;python_version=='3.8.5'
+    tqdm
+    asgiref
 
 [options.entry_points]
 console_scripts =
