Implement memory limits to ensure program doesn't crash due to runaway subprocess.

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ install_requires =
     numpy >= 1.21.4;python_version=='3.8.5'
     tqdm
     asgiref
+    psutil
 
 [options.entry_points]
 console_scripts =
