expanded setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,21 @@
 [metadata]
 name = peaks2utr
 version = 0.1
+author = William Haese-Hill
+author_email = william.haese-hill@glasgow.ac.uk
+description = A robust, parallelized Python CLI for annotating three_prime_UTR
+
+url = https://github.com/haessar/peaks2utr
+
+license_files = file: LICENSE
+license = GNU General Public License v3 (GPLv3)
+
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Programming Language :: Python
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3 :: Only
 
 [options]
 packages = peaks2utr
