--- a/.gitignore
+++ b/.gitignore
@@ -223,8 +223,8 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 /.idea
 
-# test runs
-/tests
-
 # Sqlite3 dbs
 *.db
+
+# results outputs
+results/*/output
