added filtering of zero coverage intervals feature

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = peaks2utr
-version = 0.2
+version = 0.3
 author = William Haese-Hill
 author_email = william.haese-hill@glasgow.ac.uk
 description = A robust, parallelized Python CLI for annotating three_prime_UTR
@@ -21,6 +21,7 @@ classifiers =
 packages = peaks2utr
 install_requires =
     requests
+    genometools-genometools
     gffutils == 0.10.1
     pysam
     MACS2
@@ -28,6 +29,7 @@ install_requires =
     tqdm
     asgiref
     psutil
+    pybedtools
 
 [options.entry_points]
 console_scripts =
