--- a/setup.cfg
+++ b/setup.cfg
@@ -19,11 +19,12 @@ classifiers =
 
 [options]
 packages = peaks2utr
+python_requires = >=3.8, <3.10
 install_requires =
     requests
     gffutils == 0.10.1
     pysam
-    MACS2
+    MACS3
     numpy >= 1.21.4;python_version=='3.8.5'
     tqdm
     asgiref
