return to simpler PyPI package with updated mac3. acknowledge separate dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = peaks2utr
-version = 0.3
+version = 0.4
 author = William Haese-Hill
 author_email = william.haese-hill@glasgow.ac.uk
 description = A robust, parallelized Python CLI for annotating three_prime_UTR
@@ -25,7 +25,7 @@ install_requires =
     gffutils == 0.10.1
     pysam
     MACS3
-    numpy >= 1.21.4;python_version=='3.8.5'
+    numpy >= 1.21.4
     tqdm
     asgiref
     psutil
