--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@ version = 0.4
 author = William Haese-Hill
 author_email = william.haese-hill@glasgow.ac.uk
 description = A robust, parallelized Python CLI for annotating three_prime_UTR
-
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/haessar/peaks2utr
-
 license_files = file: LICENSE
 license = GNU General Public License v3 (GPLv3)
 
