--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ classifiers =
 
 [options]
 packages = peaks2utr
-python_requires = >=3.8, <3.10
+python_requires = >=3.8
 install_requires =
     requests
     gffutils == 0.10.1
@@ -30,6 +30,9 @@ install_requires =
     asgiref
     psutil
     pybedtools
+    typing-extensions
+    importlib-resources
+    zipp
 
 [options.entry_points]
 console_scripts =
