--- a/setup.cfg
+++ b/setup.cfg
@@ -15,11 +15,12 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3 :: Only
 
 [options]
 packages = peaks2utr
-python_requires = >=3.8
+python_requires = >=3.8, <3.11
 install_requires =
     requests
     gffutils == 0.10.1
