improved demo with own entry-point for simplicity

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = peaks2utr
-version = 0.5.3
+version = 0.6.0
 author = William Haese-Hill
 author_email = william.haese-hill@glasgow.ac.uk
 description = A robust, parallelized Python CLI for annotating three_prime_UTR
@@ -20,6 +20,7 @@ classifiers =
 
 [options]
 packages = peaks2utr
+include_package_data = True
 python_requires = >=3.8, <3.11
 install_requires =
     requests
@@ -38,3 +39,4 @@ install_requires =
 [options.entry_points]
 console_scripts =
     peaks2utr = peaks2utr:main
+    peaks2utr-demo = peaks2utr:demo
