fix apt-get bedtools

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      uses: awalsh128/cache-apt-pkgs-action@v1.3.0
+      with:
+        packages: bedtools
+        version: 1.0
       run: |
-        apt-get -y update; apt-get -y install bedtools
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         pip install .
