--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Cache APT Packages
       uses: awalsh128/cache-apt-pkgs-action@v1.3.0
       with:
-        packages: bedtools
+        packages: bedtools genometools
         version: 1.0
     - name: Install dependencies
       run: |
