add current result and fixed expected output

--- a/tests/case1/case1.ini
+++ b/tests/case1/case1.ini
@@ -40,6 +40,19 @@ show_data_range = false
 color = red
 
 [peaks2utr_gtf]
+file = case1_current.new.fixed.gtf
+title = current peaks2utr gtf
+height = 3
+
+[hlines]
+file_type = hlines
+y_values = 0
+min_value = -1
+max_value = 1
+show_data_range = false
+color = red
+
+[peaks2utr_gtf]
 file = case1.new.gtf
-title = peaks2utr gtf
+title = expected peaks2utr gtf
 height = 3
