--- a/tests/case2/case2.ini
+++ b/tests/case2/case2.ini
@@ -31,6 +31,21 @@ color = red
 [input_gtf]
 file = case2.gtf
 title = input gtf
+all_labels_inside = true
+height = 3
+
+[hlines]
+file_type = hlines
+y_values = 0
+min_value = -1
+max_value = 1
+show_data_range = false
+color = red
+
+[peaks2utr_gtf]
+file = case2_current.new.fixed.gtf
+title = current peaks2utr gtf
+all_labels_inside = true
 height = 3
 
 [hlines]
@@ -43,5 +58,6 @@ color = red
 
 [peaks2utr_gtf]
 file = case2.new.gtf
-title = peaks2utr gtf
+title = expected peaks2utr gtf
+all_labels_inside = true
 height = 3
