update case1 and case2

--- a/tests/case1/case1.ini
+++ b/tests/case1/case1.ini
@@ -40,7 +40,7 @@ show_data_range = false
 color = red
 
 [peaks2utr_gtf]
-file = case1_current.new.fixed.gtf
+file = case1_current.new.gtf
 title = current peaks2utr gtf
 height = 3
 
