--- a/tests/case2/case2.ini
+++ b/tests/case2/case2.ini
@@ -43,7 +43,7 @@ show_data_range = false
 color = red
 
 [peaks2utr_gtf]
-file = case2_current.new.fixed.gtf
+file = case2_current.new.gtf
 title = current peaks2utr gtf
 all_labels_inside = true
 height = 3
