--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     requests
     gffutils == 0.10.1
     pysam
-    MACS3
+    MACS3 == 3.0.0b3
     numpy >= 1.21.4
     tqdm
     asgiref
