latest macs2 version with attempted py3.11

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,17 +16,18 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3 :: Only
 
 [options]
 packages = peaks2utr
 include_package_data = True
-python_requires = >=3.8, <3.11
+python_requires = >=3.8, <=3.11
 install_requires =
     requests
     gffutils == 0.10.1
     pysam
-    MACS3 == 3.0.0b1
+    MACS2 == 2.2.9.1
     numpy >= 1.21.4
     tqdm
     asgiref
