--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ classifiers =
 [options]
 packages = peaks2utr
 include_package_data = True
-python_requires = >=3.8, <=3.11
+python_requires = >=3.8, <3.12
 install_requires =
     requests
     gffutils == 0.10.1
