--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Cache APT Packages
+    - name: Cache APT Packages (Linux)
       uses: awalsh128/cache-apt-pkgs-action@v1.3.0
       with:
         packages: bedtools genometools
         version: 1.0
-    - name: Install dependencies
+      if: matrix.os == 'ubuntu-latest'
+    - name: Install dependencies (macOS)
+      run: brew install bedtools genometools
+      if: matrix.os == 'macos-latest'
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
