--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = peaks2utr
-version = 1.3.0
+version = 1.3.1
 author = William Haese-Hill
 author_email = william.haese-hill@glasgow.ac.uk
 description = A robust, parallelized Python CLI for annotating three_prime_UTR
@@ -28,7 +28,7 @@ install_requires =
     gffutils == 0.12
     pysam
     MACS2 == 2.2.9.1
-    numpy >= 1.21.4
+    numpy == 1.26.4
     tqdm
     asgiref
     psutil
