--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ install_requires =
     gffutils == 0.12
     pysam
     MACS2 == 2.2.9.1
-    numpy == 1.26.4
+    numpy >= 1.21.4
     tqdm
     asgiref
     psutil
